--- a/loader/CMakeLists.txt
+++ b/loader/CMakeLists.txt
@@ -7,7 +7,7 @@ file(MAKE_DIRECTORY ${CMAKE_BINARY_DIR}/loader)
 set(CMAKE_C_LINK_EXECUTABLE "${LINKER_TOOL} <OBJECTS> -m elf_i386  -Ttext=0x8000  -o loader/loader.elf")
 
 # 设置要编译链接的文件列表
-file(GLOB C_LIST "*.c" "*.h" "../common/*.h" "../common/*.c")
+file(GLOB C_LIST "*.c" "*.h" "${CMAKE_SOURCE_DIR}/common/*.h" "${CMAKE_SOURCE_DIR}/common/*.c")
 add_executable(${PROJECT_NAME} start.s ${C_LIST})
 
 
