修复执行指令的bug

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,8 @@
 {
     "files.associations": {
         "loader_16.h": "c",
-        "cpu_instr.h": "c"
+        "cpu_instr.h": "c",
+        "boot_info.h": "c",
+        "types.h": "c"
     }
 }
