--- a/boot/CMakeLists.txt
+++ b/boot/CMakeLists.txt
@@ -4,7 +4,7 @@ project(boot LANGUAGES C)
 file(MAKE_DIRECTORY ${CMAKE_BINARY_DIR}/boot)
 
 # 设置链接器配置信息
-set(CMAKE_C_LINK_EXECUTABLE "${LINKER_TOOL} <OBJECTS> -m elf_i386  -Ttext=0x7c00  --section-start boot_end=0x7dfe -o boot/boot.elf")
+set(CMAKE_C_LINK_EXECUTABLE "${LINKER_TOOL} <OBJECTS> -m elf_i386  -Ttext=0x7c00  --section-start boot_end=0x7dfe -o ${CMAKE_BINARY_DIR}/boot/boot.elf")
 
 # 设置要编译链接的文件列表
 file(GLOB C_LIST "*.c" "*.h")
