--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,8 @@
         "types.h": "c",
         "loader.h": "c",
         "compare": "c",
-        "init.h": "c"
-    }
+        "init.h": "c",
+        "cpu.h": "c"
+    },
+    "C_Cpp.errorSquiggles": "disabled"
 }
