--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,7 +7,8 @@
         "loader.h": "c",
         "compare": "c",
         "init.h": "c",
-        "cpu.h": "c"
+        "cpu.h": "c",
+        "os_cfg.h": "c"
     },
     "C_Cpp.errorSquiggles": "disabled"
 }
