--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,7 +8,8 @@
         "compare": "c",
         "init.h": "c",
         "cpu.h": "c",
-        "os_cfg.h": "c"
+        "os_cfg.h": "c",
+        "irq.h": "c"
     },
     "C_Cpp.errorSquiggles": "disabled"
 }
