--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,7 +15,8 @@
         "mouse.h": "c",
         "klib.h": "c",
         "list.h": "c",
-        "log.h": "c"
+        "log.h": "c",
+        "task.h": "c"
     },
     "C_Cpp.errorSquiggles": "disabled",
     "marscode.codeCompletionPro": {
