--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -16,7 +16,9 @@
         "klib.h": "c",
         "list.h": "c",
         "log.h": "c",
-        "task.h": "c"
+        "task.h": "c",
+        "cstdint": "c",
+        "stdarg.h": "c"
     },
     "C_Cpp.errorSquiggles": "disabled",
     "marscode.codeCompletionPro": {
