--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -19,7 +19,8 @@
         "task.h": "c",
         "cstdint": "c",
         "stdarg.h": "c",
-        "semaphore.h": "c"
+        "semaphore.h": "c",
+        "mutex.h": "c"
     },
     "C_Cpp.errorSquiggles": "disabled",
     "marscode.codeCompletionPro": {
