--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -20,7 +20,8 @@
         "cstdint": "c",
         "stdarg.h": "c",
         "semaphore.h": "c",
-        "mutex.h": "c"
+        "mutex.h": "c",
+        "bitmap.h": "c"
     },
     "C_Cpp.errorSquiggles": "disabled",
     "marscode.codeCompletionPro": {
