--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -21,7 +21,8 @@
         "stdarg.h": "c",
         "semaphore.h": "c",
         "mutex.h": "c",
-        "bitmap.h": "c"
+        "bitmap.h": "c",
+        "memory.h": "c"
     },
     "C_Cpp.errorSquiggles": "disabled",
     "marscode.codeCompletionPro": {
