--- a/kernel/CMakeLists.txt
+++ b/kernel/CMakeLists.txt
@@ -7,7 +7,7 @@ set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -O0")
 
 
 # 设置链接器配置信息
-set(CMAKE_C_LINK_EXECUTABLE "${LINKER_TOOL} <OBJECTS> -m elf_i386  -Ttext=0x100000 -o ${CMAKE_BINARY_DIR}/kernel/kernel.elf")
+set(CMAKE_C_LINK_EXECUTABLE "${LINKER_TOOL} <OBJECTS> -m elf_i386  -T /home/lyra/os/lyra-linux-os/kernel/kernel.lds -o ${CMAKE_BINARY_DIR}/kernel/kernel.elf")
 
 # 设置要编译链接的文件列表 GLOB_RECURSE递归获取所有.c文件   
 file(GLOB_RECURSE C_LIST "*.c" "*.h" "tools/*.c" "init/*.c" "init/*.h" "include/*.c" "include/tools/*.h"  "include/*.h" "cpu/*.c" "cpu/*.h" "include/device/*.h" "include/core/*.h" "cpu/device/*" "cpu/core/*" "${CMAKE_SOURCE_DIR}/common/*.h" "${CMAKE_SOURCE_DIR}/common/*.c")
